@@ -1,3 +1,8 @@
+Thu Dec  7 16:18:56 EST 2000  Ben Collins <bcollins@debian.org>
+
+  * docs/debsig-verify.1.in: Move to here, and generate at build so we get
+    the right paths in the file.
+
 Thu Dec  7 13:30:43 EST 2000  Ben Collins <bcollins@debian.org>
 
   * docs/debsig-verify.1: new file, man page.
